force-app/main/default/objects/Dealer_Product_Tracking__c/Dealer_Product_Tracking__c.object-meta.xml
<CustomObject>
    <label>Dealer Product Tracking</label>
    <nameField>
        <displayFormat>DPT - {0000}</displayFormat>
        <label>Dealer Product Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Product Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>