force-app/main/default/objects/Dealer_Product_Tracking__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dealer Product Trackings</relationshipLabel>
    <relationshipName>Dealer_Product_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>