force-app/main/default/objects/Dealer_Product_Tracking__c/fields/First_Consumption_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Consumption_Date__c</fullName>
    <label>First Consumption Date</label>
    <type>Date</type>
</CustomField>