force-app/main/default/objects/Dealer_Product_Tracking__c/fields/Last_Consumption_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Consumption_Date__c</fullName>
    <label>Last Consumption Date</label>
    <type>Date</type>
</CustomField>