force-app/main/default/objects/Dealer_Product_Tracking__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Dealer Product Trackings</relationshipLabel>
    <relationshipName>Dealer_Product_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>